# gpu-gillespie

./: LICENSE  MANIFEST.in  Makefile  README.md  design.md  environment.yml  examples.html  interaction.md  main.js  performance.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-conda.yml  python-publish.yml
conda/: meta.yaml
gpu_gillespie/: __init__.py  cli.py
gpu_gillespie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gpu_gillespie/core/: __init__.py  cuda_kernels.py  gillespie_gpu.py  parallel_simulator.py
gpu_gillespie/models/: basic_models.py
gpu_gillespie/utils/: __init__.py  data_processing.py  performance_metrics.py
gpu_gillespy2_byOKComputer/: LICENSE  Makefile  documentation.html  index.html  outline.md  setup.py
gpu_gillespy2_byOKComputer/gpu_gillespie/: __init__.py
gpu_gillespy2_byOKComputer/gpu_gillespie/examples/: advanced_analysis.py  basic_usage.py  parameter_sweep_example.py  performance_comparison.py
gpu_gillespy2_byOKComputer/gpu_gillespie/models/: __init__.py  basic_models.py
gpu_gillespy2_byOKComputer/gpu_gillespie/utils/: performance_metrics.py
tests/: test_dimerization_model.py
