[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-gillespie"
description = "High-performance GPU-accelerated Gillespie stochastic simulation algorithms"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "GPU-Gillespie Development Team", email = "contact@gpu-gillespie.org"},
]
keywords = ["gillespie", "stochastic simulation", "gpu", "cuda", "parallel computing", "biochemical networks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.6.0",
    "matplotlib>=3.3.0",
    "pandas>=1.2.0",
    "numba>=0.56.0",
    "psutil>=5.8.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8.0",
    "mypy>=0.910",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "nbsphinx>=0.8",
    "myst-parser>=0.15",
]
examples = [
    "jupyter>=1.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "ipywidgets>=7.6",
]

[project.urls]
Homepage = "https://github.com/gpu-gillespie/gpu-gillespie"
Documentation = "https://gpu-gillespie.readthedocs.io/"
Repository = "https://github.com/gpu-gillespie/gpu-gillespie.git"
"Bug Tracker" = "https://github.com/gpu-gillespie/gpu-gillespie/issues"

[project.scripts]
gpu-gillespie = "gpu_gillespie.cli:main"

[tool.setuptools_scm]
write_to = "gpu_gillespie/_version.py"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["gpu_gillespie/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["gpu_gillespie"]
omit = [
    "tests/*",
    "setup.py",
    "gpu_gillespie/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]